#1.0.0 Update: new 16 colors for all vanilla items and blocks